fixed issue where content higher than browser height was being shifted to left by 5 pixels because scrollbars appeared

--- a/cchecker-ui/src/styles.css
+++ b/cchecker-ui/src/styles.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
 	font-size: 12px !important;
 	font-family: Arial, Helvetica, sans-serif;
